--- a/python-homework/PyBank/main.ipynb
+++ b/python-homework/PyBank/main.ipynb
@@ -9,6 +9,7 @@
    },
    "outputs": [],
    "source": [
+    "#import csv file\n",
     "import csv\n",
     "from pathlib import Path"
    ]
@@ -22,6 +23,7 @@
    },
    "outputs": [],
    "source": [
+    "# Set file paths\n",
     "budget_filepath = Path('budget_data.csv')\n",
     "output_file = Path('analysis/budget_analysis.txt')"
    ]
@@ -140,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
